// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compiler.TypeExpression.RecordDefinition 1`] = `
NodeObject {
  "emitNode": undefined,
  "end": -1,
  "flags": 16,
  "id": 0,
  "kind": 187,
  "localSymbol": undefined,
  "members": [
    NodeObject {
      "emitNode": undefined,
      "end": -1,
      "flags": 16,
      "id": 0,
      "initializer": undefined,
      "jsDoc": undefined,
      "kind": 171,
      "localSymbol": undefined,
      "modifierFlagsCache": 0,
      "modifiers": undefined,
      "name": IdentifierObject {
        "emitNode": undefined,
        "end": -1,
        "escapedText": "foo",
        "flags": 16,
        "flowNode": undefined,
        "id": 0,
        "jsDoc": undefined,
        "kind": 80,
        "parent": undefined,
        "pos": -1,
        "symbol": undefined,
        "transformFlags": 0,
      },
      "original": undefined,
      "parent": undefined,
      "pos": -1,
      "questionToken": undefined,
      "symbol": undefined,
      "transformFlags": 1,
      "type": NodeObject {
        "emitNode": undefined,
        "end": -1,
        "flags": 16,
        "id": 0,
        "kind": 183,
        "modifierFlagsCache": 0,
        "original": undefined,
        "parent": undefined,
        "pos": -1,
        "transformFlags": 1,
        "typeArguments": undefined,
        "typeName": IdentifierObject {
          "emitNode": undefined,
          "end": -1,
          "escapedText": "number",
          "flags": 16,
          "flowNode": undefined,
          "id": 0,
          "jsDoc": undefined,
          "kind": 80,
          "parent": undefined,
          "pos": -1,
          "symbol": undefined,
          "transformFlags": 0,
        },
      },
    },
    NodeObject {
      "emitNode": undefined,
      "end": -1,
      "flags": 16,
      "id": 0,
      "initializer": undefined,
      "jsDoc": undefined,
      "kind": 171,
      "localSymbol": undefined,
      "modifierFlagsCache": 0,
      "modifiers": undefined,
      "name": IdentifierObject {
        "emitNode": undefined,
        "end": -1,
        "escapedText": "bar",
        "flags": 16,
        "flowNode": undefined,
        "id": 0,
        "jsDoc": undefined,
        "kind": 80,
        "parent": undefined,
        "pos": -1,
        "symbol": undefined,
        "transformFlags": 0,
      },
      "original": undefined,
      "parent": undefined,
      "pos": -1,
      "questionToken": undefined,
      "symbol": undefined,
      "transformFlags": 1,
      "type": NodeObject {
        "emitNode": undefined,
        "end": -1,
        "flags": 16,
        "id": 0,
        "kind": 192,
        "modifierFlagsCache": 0,
        "original": undefined,
        "parent": undefined,
        "pos": -1,
        "transformFlags": 1,
        "types": [
          NodeObject {
            "emitNode": undefined,
            "end": -1,
            "flags": 16,
            "id": 0,
            "kind": 201,
            "literal": NodeObject {
              "emitNode": undefined,
              "end": -1,
              "flags": 16,
              "hasExtendedUnicodeEscape": undefined,
              "id": 0,
              "kind": 11,
              "localSymbol": undefined,
              "modifierFlagsCache": 0,
              "original": undefined,
              "parent": undefined,
              "pos": -1,
              "singleQuote": undefined,
              "symbol": undefined,
              "text": "x",
              "transformFlags": 0,
            },
            "modifierFlagsCache": 0,
            "original": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 1,
          },
          NodeObject {
            "emitNode": undefined,
            "end": -1,
            "flags": 16,
            "id": 0,
            "kind": 201,
            "literal": NodeObject {
              "emitNode": undefined,
              "end": -1,
              "flags": 16,
              "hasExtendedUnicodeEscape": undefined,
              "id": 0,
              "kind": 11,
              "localSymbol": undefined,
              "modifierFlagsCache": 0,
              "original": undefined,
              "parent": undefined,
              "pos": -1,
              "singleQuote": undefined,
              "symbol": undefined,
              "text": "y",
              "transformFlags": 0,
            },
            "modifierFlagsCache": 0,
            "original": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 1,
          },
        ],
      },
    },
  ],
  "modifierFlagsCache": 0,
  "original": undefined,
  "parent": undefined,
  "pos": -1,
  "symbol": undefined,
  "transformFlags": 1,
}
`;

exports[`compiler.TypeExpression.StringLiteral 1`] = `
NodeObject {
  "emitNode": undefined,
  "end": -1,
  "flags": 16,
  "id": 0,
  "kind": 201,
  "literal": NodeObject {
    "emitNode": undefined,
    "end": -1,
    "flags": 16,
    "hasExtendedUnicodeEscape": undefined,
    "id": 0,
    "kind": 11,
    "localSymbol": undefined,
    "modifierFlagsCache": 0,
    "original": undefined,
    "parent": undefined,
    "pos": -1,
    "singleQuote": undefined,
    "symbol": undefined,
    "text": "foo",
    "transformFlags": 0,
  },
  "modifierFlagsCache": 0,
  "original": undefined,
  "parent": undefined,
  "pos": -1,
  "transformFlags": 1,
}
`;

exports[`compiler.TypeExpression.StringLiteral 2`] = `
NodeObject {
  "emitNode": undefined,
  "end": -1,
  "flags": 16,
  "id": 0,
  "kind": 187,
  "localSymbol": undefined,
  "members": [
    NodeObject {
      "emitNode": undefined,
      "end": -1,
      "flags": 16,
      "id": 0,
      "initializer": undefined,
      "jsDoc": undefined,
      "kind": 171,
      "localSymbol": undefined,
      "modifierFlagsCache": 0,
      "modifiers": undefined,
      "name": IdentifierObject {
        "emitNode": undefined,
        "end": -1,
        "escapedText": "foo",
        "flags": 16,
        "flowNode": undefined,
        "id": 0,
        "jsDoc": undefined,
        "kind": 80,
        "parent": undefined,
        "pos": -1,
        "symbol": undefined,
        "transformFlags": 0,
      },
      "original": undefined,
      "parent": undefined,
      "pos": -1,
      "questionToken": undefined,
      "symbol": undefined,
      "transformFlags": 1,
      "type": NodeObject {
        "emitNode": undefined,
        "end": -1,
        "flags": 16,
        "id": 0,
        "kind": 183,
        "modifierFlagsCache": 0,
        "original": undefined,
        "parent": undefined,
        "pos": -1,
        "transformFlags": 1,
        "typeArguments": undefined,
        "typeName": IdentifierObject {
          "emitNode": undefined,
          "end": -1,
          "escapedText": "number",
          "flags": 16,
          "flowNode": undefined,
          "id": 0,
          "jsDoc": undefined,
          "kind": 80,
          "parent": undefined,
          "pos": -1,
          "symbol": undefined,
          "transformFlags": 0,
        },
      },
    },
    NodeObject {
      "emitNode": undefined,
      "end": -1,
      "flags": 16,
      "id": 0,
      "initializer": undefined,
      "jsDoc": undefined,
      "kind": 171,
      "localSymbol": undefined,
      "modifierFlagsCache": 0,
      "modifiers": undefined,
      "name": IdentifierObject {
        "emitNode": undefined,
        "end": -1,
        "escapedText": "bar",
        "flags": 16,
        "flowNode": undefined,
        "id": 0,
        "jsDoc": undefined,
        "kind": 80,
        "parent": undefined,
        "pos": -1,
        "symbol": undefined,
        "transformFlags": 0,
      },
      "original": undefined,
      "parent": undefined,
      "pos": -1,
      "questionToken": undefined,
      "symbol": undefined,
      "transformFlags": 1,
      "type": NodeObject {
        "emitNode": undefined,
        "end": -1,
        "flags": 16,
        "id": 0,
        "kind": 192,
        "modifierFlagsCache": 0,
        "original": undefined,
        "parent": undefined,
        "pos": -1,
        "transformFlags": 1,
        "types": [
          NodeObject {
            "emitNode": undefined,
            "end": -1,
            "flags": 16,
            "id": 0,
            "kind": 201,
            "literal": NodeObject {
              "emitNode": undefined,
              "end": -1,
              "flags": 16,
              "hasExtendedUnicodeEscape": undefined,
              "id": 0,
              "kind": 11,
              "localSymbol": undefined,
              "modifierFlagsCache": 0,
              "original": undefined,
              "parent": undefined,
              "pos": -1,
              "singleQuote": undefined,
              "symbol": undefined,
              "text": "x",
              "transformFlags": 0,
            },
            "modifierFlagsCache": 0,
            "original": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 1,
          },
          NodeObject {
            "emitNode": undefined,
            "end": -1,
            "flags": 16,
            "id": 0,
            "kind": 201,
            "literal": NodeObject {
              "emitNode": undefined,
              "end": -1,
              "flags": 16,
              "hasExtendedUnicodeEscape": undefined,
              "id": 0,
              "kind": 11,
              "localSymbol": undefined,
              "modifierFlagsCache": 0,
              "original": undefined,
              "parent": undefined,
              "pos": -1,
              "singleQuote": undefined,
              "symbol": undefined,
              "text": "y",
              "transformFlags": 0,
            },
            "modifierFlagsCache": 0,
            "original": undefined,
            "parent": undefined,
            "pos": -1,
            "transformFlags": 1,
          },
        ],
      },
    },
  ],
  "modifierFlagsCache": 0,
  "original": undefined,
  "parent": undefined,
  "pos": -1,
  "symbol": undefined,
  "transformFlags": 1,
}
`;
